--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "fprime"]
 	path = fprime
 	url = https://github.com/LeStarch/fprime.git
+[submodule "Submod"]
+	url = https://github.com/nasa/fprime.git
